fix(docker): use named volumes for Easypanel compatibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,8 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./projects:/app/projects
+      - excalidraw-data:/app/projects
     restart: unless-stopped
+
+volumes:
+  excalidraw-data:
